tests/ui/parser/issues/issue-98601-delimiter-error-unexpected-close.rs
fn main() {
    todo!();
}

fn other(_: i32)) {} //~ ERROR unexpected closing delimiter: `)`
